--- a/Todoey/Base.lproj/Main.storyboard
+++ b/Todoey/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="t1B-gx-AKY" id="cee-Tv-v6K"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoey" id="lbk-yv-3v8"/>
+                    <navigationItem key="navigationItem" title="Todoey" id="lbk-yv-3v8">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="NHI-n4-FPl">
+                            <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="t1B-gx-AKY" id="vV5-dq-Qfs"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vtW-wk-wXf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
